--- a/app/modules/authentication/views/getstarted.html
+++ b/app/modules/authentication/views/getstarted.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 getStarted">
+<div class="fadeIn col-xs-12 col-sm-12 col-md-6 col-lg-6 getStarted">
 	<div class="row">
 		<div class="col-xs-12">
 			<div class="row">
