--- a/app/modules/authentication/views/login.html
+++ b/app/modules/authentication/views/login.html
@@ -1,4 +1,4 @@
-<div class="col-xs-10 col-sm-10 col-md-6 col-lg-4 login-wrapper">
+<div class="fadeIn col-xs-10 col-sm-10 col-md-6 col-lg-4 login-wrapper">
 	<header class="login-header col-xs-12">
 		<div class="row">
 			<div class="cloud1"><img src="assets/images/login_cloud1.png"></div>
