--- a/less/common.less
+++ b/less/common.less
@@ -590,6 +590,9 @@ section{
 			}
 		}
 	}
+	&.full-width{
+		width:100%;
+	}
 }
 button[disabled]{
 	opacity:0.4;
@@ -653,5 +656,77 @@ button[disabled]{
 	    		}
 	    	}
 	    }
+	}
+}
+.fadeIn{
+  animation-name: fadeIn;
+  animation-duration: 1s;
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+form{
+	.form-group{
+		position:relative;
+		margin-bottom:6%;
+		&:nth-child(2){
+			margin-bottom:0px;
+		}
+		input{
+			.GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@marinerapprox,normal);
+			.PIXEL2EM(20);
+			width:100%;
+			border:none;
+			outline:none;
+			background-image: linear-gradient(to right, @marinerapprox 25%, rgba(255,255,255,0) 0%);
+			background-position: bottom;
+			background-size: 6px 2px;
+			background-repeat: repeat-x;
+			background-color:transparent;
+			padding-bottom:2%;
+			&:focus,&:valid{
+				+ label{
+					.GLOBAL_FONT_STYLE('Roboto-Bold',@marinerapprox,normal);
+					.PIXEL2EM(16);
+					top:-72%;
+				}
+			}
+		}
+		input + label{
+				position:absolute;
+				pointer-events:none;
+				top:-4px;
+				.GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@marinerapprox,normal);
+				.PIXEL2EM(24);
+				transition:all 0.2s ease;
+				opacity:0.6;
+				letter-spacing:0px;
+			}
+		.password-cover{
+			position:relative;
+			span{
+				cursor: pointer;
+				position:absolute;
+				display: inline-block;
+				top:0;
+				right:0;
+				width:5%;
+				img{
+					width: 100%;
+				}
+			}
+		}
+	}
+	.from-btn-group{
+		position:relative;
+		float:left;
+		width:100%;
+		margin-top:10%;
 	}
 }
