--- a/less/register.less
+++ b/less/register.less
@@ -56,6 +56,24 @@ section{
 			float:left;
 			padding-top:14%;
 			.form-group{
+				.select{
+					width:100%;
+					min-width:auto;
+				}
+				.styledSelect{
+					padding-right:70px;
+					padding-left:14px;
+					margin-left:0px;
+					.PIXEL2EM(24)!important;
+					&:after{
+						right:0px;
+					}
+				}
+				.options{
+					li{
+						.PIXEL2EM(24)!important;
+					}
+				}
 				position:relative;
 				margin-bottom: 7%;
 				float:left;
@@ -147,7 +165,7 @@ section{
 				}
 			}
 		}
-		ul{
+		ul.login-dialog{
 			list-style:none;
 			float:left;
 			margin-top:8%;
@@ -160,4 +178,198 @@ section{
 			}
 		}
 	}
+}
+
+.modal-dialog{
+	width:30%;
+	position:fixed;
+	top:20%;
+	transform:translateY(-20%);
+	left:0;
+	right:0px;
+	margin:0px auto;	
+	.modal-content{
+		float: left;
+		box-shadow: none;
+		border:none;
+		.otp-wrapper{
+			float: left;
+			width:100%;
+			border-radius: 25px;
+			background-image: -moz-linear-gradient( 90deg, rgb( 245, 245, 245 ) 0%, rgb( 255, 255, 255 ) 100%);
+  			background-image: -webkit-linear-gradient( 90deg, rgb( 245, 245, 245 ) 0%, rgb( 255, 255, 255 ) 100%);
+  			box-shadow: 2.5px 4.33px 10px 0px rgb( 36, 122, 188 );
+			padding:16% 10% 16% 10%;
+			button{
+				&.modal-close{
+					border:none;
+					background: none;
+					outline: none;
+					width: 30px;
+					height: 30px;
+					position:absolute;
+					right:5%;
+					top:5%;
+					background-image:url('../images/modal-close.png');
+					background-size:100% 100%;
+					background-repeat: no-repeat;
+					background-position: center;
+				}
+				&.resendOtp{
+					border:none;
+					background: none;
+					outline: none;
+					.GLOBAL_FONT_STYLE('Roboto-Bold',@lochmaraapprox,normal);
+					.PIXEL2EM(12);
+					margin-top: 6%;					
+					span{
+						position: relative;
+						display: inline-block;
+						width: 18px;
+						height: 20px;
+						background-image:url('../images/resendOtp.png');
+						background-size:100% 100%;
+						background-repeat: no-repeat;
+						background-position: center;
+						top: 6px;
+						right: 5px;
+					}
+				}
+			}
+			.login-header{
+				.cloud1,.cloud2{
+					position:absolute;
+					width:20%;
+					img{
+						width:100%;
+					}
+				}
+				.cloud1{
+					top: 0px;
+					left: 3%;
+				}
+				.cloud2{
+					bottom: -30%;
+					left: 0;
+					right: 0;
+					margin: auto;
+				}
+				p{
+					.GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@blackapprox,normal);
+					.PIXEL2EM(24);
+					margin-left: 10%;
+					margin-top: 9%;
+				}
+				.plane{
+					width:38%;
+					img{
+						width:100%;
+					}
+				}
+			}	
+			.otp-form{
+				width:100%;
+				float:left;
+				padding-top:24%;
+				.form-group{
+					position:relative;
+					margin-bottom:6%;
+					&:nth-child(2){
+						margin-bottom:0px;
+					}
+					input{
+						.GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@marinerapprox,normal);
+						.PIXEL2EM(20);
+						width:100%;
+						border:none;
+						outline:none;
+						background-image: linear-gradient(to right, @marinerapprox 25%, rgba(255,255,255,0) 0%);
+						background-position: bottom;
+						background-size: 6px 2px;
+						background-repeat: repeat-x;
+						background-color:transparent;
+						padding-bottom:2%;
+						&:focus,&:valid{
+							+ label{
+								.GLOBAL_FONT_STYLE('Roboto-Bold',@marinerapprox,normal);
+								.PIXEL2EM(16);
+								top:-72%;
+							}
+						}
+					}
+					input + label{
+							position:absolute;
+							pointer-events:none;
+							top:-4px;
+							.GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@marinerapprox,normal);
+							.PIXEL2EM(24);
+							transition:all 0.2s ease;
+							opacity:0.6;
+							letter-spacing:0px;
+						}
+					.password-cover{
+						position:relative;
+						span{
+							cursor: pointer;
+							position:absolute;
+							display: inline-block;
+							top:0;
+							right:0;
+							width:5%;
+							img{
+								width: 100%;
+							}
+						}
+					}
+				}
+			}
+			.login-btn-group{
+				position:relative;
+				float:left;
+				width:100%;
+				margin-top:10%;
+				span{
+					display:inline-block;
+					&.or{
+						.GLOBAL_FONT_STYLE('Roboto-Bold',@black,normal);
+						.PIXEL2EM(12);
+						display:inline-block;
+						position:absolute;
+						margin-left:auto;
+						margin-right:auto;
+						top:50%;
+						transform:translateY(-50%);
+						left:0px;
+						right:0px;
+						text-align:center;
+						width:6%;
+					}
+				}
+			}
+		}
+	}
+		
+}
+/* Effect 1: Fade in and scale up */
+.fade-scale {
+  -webkit-transform: scale(0.7);
+	-moz-transform: scale(0.7);
+	-ms-transform: scale(0.7);
+	transform: scale(0.7);
+	opacity: 0;
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+.fade-scale.in {
+  -webkit-transform: scale(1);
+	-moz-transform: scale(1);
+	-ms-transform: scale(1);
+	transform: scale(1);
+	opacity: 1;
+}
+.modal-backdrop{
+	opacity: 1!important;
+	background-color:rgba(255,255,255,0.9);
 }
